<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/entrant_navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_signed_up" />

    <item
        android:id="@+id/entrant_navigation_waitlist"
        android:icon="@drawable/ic_waitlist_black_24dp"
        android:title="@string/title_waitlist" />

    <item
        android:id="@+id/entrant_navigation_notifications"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/title_profile" />

</menu>